--- a/projekte/index.css
+++ b/projekte/index.css
@@ -5,13 +5,16 @@
     --clr-shadow: hsl(0 0% 90%);
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     background: var(--clr-background);
     color: var(--clr-foreground);
 }
 
 header {
-    overflow: hidden, visible;
     box-shadow: 0 2px 2px var(--clr-shadow);
 }
 
@@ -106,13 +109,14 @@ header {
     width: max-content;
     font-size: 0.7rem;
     top: 95%;
-    left: 50%;
+    left: -100%;
     transform: translateX(-50%), scale(0);
     padding: 0.5em 0.3em;
     border-radius: 0.125em;
     opacity: 0;
     transform-origin: top;
     transition: transform 0ms linear 100ms, opacity 100ms linear;
+    pointer-events: none;
 }
 
 #theme-toggle:hover,
